* Auth: Remove MySQL PASSWORD hashing method to hash password, replace by MD5 hashing, add code to make a smooth transition between hashing method  * XML engine: Fix a trivial recent bug in dotnode-xml.php  * Robots: fix a bug in crontab script robots/launch_robots.sh (add cd `dirname $0`)  * CSS: Add max_width to image in blog (work on Mozilla/*, Opera but not good on Safari (no proportional resizing), of course, that doesn't work on IE)  * DB: '''changing DB structure''' !!! {{{ ALTER TABLE `user` ADD `passwd_md5` CHAR( 32 ) NOT NULL AFTER `passwd` ; ALTER TABLE `user` CHANGE `passwd` `passwd` VARCHAR( 42 ) NULL ; ALTER TABLE `dntp_translator` ADD `passwd_md5` CHAR( 32 ) NOT NULL AFTER `passwd` ; ALTER TABLE `dntp_translator` CHANGE `passwd` `passwd` VARCHAR( 42 ) NULL ; }}}

--- a/hp/styles/default/style.css
+++ b/hp/styles/default/style.css
@@ -131,6 +131,11 @@ em.underline {
 	color: green;
 }
 
+#blog img {
+      max-width: 460px;
+      height: auto;
+}
+
 #bookmark ul li a {
 	font-weight: bold;
 	color: green;
